kubernetes/helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: default
spec:
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
